--- a/application/xzadmin/view/Public/head.html
+++ b/application/xzadmin/view/Public/head.html
@@ -17,7 +17,10 @@
     <link href="__ADMIN__/style/demo.css" rel="stylesheet">
     <link href="__ADMIN__/style/typicons.css" rel="stylesheet">
     <link href="__ADMIN__/style/animate.css" rel="stylesheet">
-
+    <!--ueditor-->
+    <script src="__ADMIN__/ueditor/ueditor.config.js" ></script>
+    <script src="__ADMIN__/ueditor/ueditor.all.min.js" ></script>
+    <script src="__ADMIN__/ueditor/lang/zh-cn/zh-cn.js" ></script>
 </head>
 <body>
 <!-- 头部 -->
