--- a/application/index/view/public/header.html
+++ b/application/index/view/public/header.html
@@ -14,7 +14,7 @@
     <!--// css -->
     <script src="__INDEX__/js/jquery-1.11.1.min.js"></script>
     <!--fonts-->
-    <link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,800,700,600' rel='stylesheet' type='text/css'>
+    <link href='#' rel='stylesheet' type='text/css'>
     <!--/fonts-->
     <link href="__INDEX__/css/animate.css" rel="stylesheet" type="text/css" media="all">
     <script src="__INDEX__/js/wow.min.js"></script>
@@ -94,21 +94,21 @@
             <ul class="rslides" id="slider3">
                 <li>
                     <div class="banner-info">
-                        <h2> <span> 德&nbsp;阳&nbsp;新&nbsp;一&nbsp;代&nbsp;重&nbsp;运&nbsp;有&nbsp;限&nbsp;责&nbsp;任&nbsp;公&nbsp;司</span></h2>
+                        <h2> <span style="letter-spacing:8px">德阳新一代重运有限责任公司</span></h2>
                         <div class="line"> </div>
                         <p></p>
                     </div>
                 </li>
                 <li>
                     <div class="banner-info">
-                        <h2><span> 四&nbsp;川&nbsp;合&nbsp;众&nbsp;铁&nbsp;路&nbsp;运&nbsp;输&nbsp;服&nbsp;务&nbsp;有&nbsp;限&nbsp;责&nbsp;任&nbsp;公&nbsp;司</span> </h2>
+                        <h2><span style="letter-spacing:8px"> 四川合众铁路运输服务有限责任公司</span> </h2>
                         <div class="line"> </div>
                         <p> </p>
                     </div>
                 </li>
                 <li>
                     <div class="banner-info">
-                        <h2><span> 德&nbsp;阳&nbsp;新&nbsp;一&nbsp;代&nbsp;包&nbsp;装&nbsp;有&nbsp;限&nbsp;公&nbsp;司 </span> </h2>
+                        <h2><span style="letter-spacing:8px"> 德阳新一代包装有限公司 </span> </h2>
                         <div class="line"> </div>
                         <p></p>
                     </div>
