--- a/application/xzadmin/view/Public/left.html
+++ b/application/xzadmin/view/Public/left.html
@@ -78,7 +78,25 @@
                 </li>
             </ul>
         </li>
-
+        <!--友情链接管理列表-->
+        <li>
+            <a href="#" class="menu-dropdown">
+                <i class="menu-icon fa fa-chain"></i>
+                <span class="menu-text">友情链接管理</span>
+                <i class="menu-expand"></i>
+            </a>
+            <ul class="submenu">
+                <li>
+                    <a href="{:url('link/linkList')}">
+                        <span class="menu-text">
+                            友情链接列表
+                        </span>
+                        <i class="menu-expand"></i>
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <!--配置管理列表-->
         <li>
             <a href="#" class="menu-dropdown">
                 <i class="menu-icon fa fa-gear"></i>
@@ -87,9 +105,19 @@
             </a>
             <ul class="submenu">
                 <li>
-                    <a href="/admin/document/index.html">
+                    <a href="{:url('conf/conf')}">
                         <span class="menu-text">
                             配置
+                        </span>
+                        <i class="menu-expand"></i>
+                    </a>
+                </li>
+            </ul>
+            <ul class="submenu">
+                <li>
+                    <a href="{:url('conf/confList')}">
+                        <span class="menu-text">
+                            配置列表
                         </span>
                         <i class="menu-expand"></i>
                     </a>
