--- a/application/xzadmin/view/Public/head.html
+++ b/application/xzadmin/view/Public/head.html
@@ -31,7 +31,7 @@
             <div class="navbar-header pull-left">
                 <a href="#" class="navbar-brand">
                     <small>
-                        <img src="__ADMIN__/images/logo.png" alt="">
+                        <img src="__ADMIN__/images/logo.jpg" alt="">
                     </small>
                 </a>
             </div>
@@ -48,7 +48,7 @@
                         <li>
                             <a class="login-area dropdown-toggle" data-toggle="dropdown">
                                 <div class="avatar" title="View your public profile">
-                                    <img src="__ADMIN__/images/adam-jansen.jpg">
+                                    <img src="__ADMIN__/images/sign.png">
                                 </div>
                                 <section>
                                     <h2><span class="profile"><span>{$Request.session.username}</span></span></h2>
